--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Wikipedia Viewer</title>
+    <title>WikiSearch</title>
 </head>
 <body>
-<h1>Wikipedia Viewer</h1>
+<h1 class="main-heading">Wiki Search</h1>
 
 <a href="https://en.wikipedia.org/wiki/Special:Random">I'm Feeling Lucky</a>
 <div class="search">
