results styling and cleaning

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 
 <a class="button" href="https://en.wikipedia.org/wiki/Special:Random" title="Random page">I'm Feeling Lucky</a> <br>
 <div class="search">
-    <input type="text" id="search-input">
+    <input type="text" id="search-input" placeholder="What are you looking for?">
     <button class="search-big-button" id="search-button">Search</button>
     <button class="search-small-button" id="search-button2">S</button>
     <ul class="autocomplete" id="autocomplete"></ul>
 </div>
-<ul id="results"></ul>
+<ul id="results" class="result"></ul>
 <script src="main.js"></script>
 </body>
 </html>
