codepen.io changes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>WikiSearch</title>
 </head>
 <body>
-<h1 class="main-heading"><img src="wiki.png" alt="Wikipedia"> Search</h1>
+<h1 class="main-heading"><img src="https://mapuwa.github.io/Wiki-viewer/wiki.png" alt="Wikipedia"> Search</h1>
 
 <a class="button" href="https://en.wikipedia.org/wiki/Special:Random" title="Random page">I'm Feeling Lucky</a> <br>
 <div class="search">
